
syntax = "proto3";

package table;

option go_package = "github.com/coschain/contentos-go/app/table";

import "prototype/multi_id.proto";
import "prototype/type.proto";

message so_stakeRecord {
	prototype.stake_record       record                          =      1;
    prototype.stake_record_reverse       record_reverse          =      2;
    prototype.vest               stake_amount                    =      3;
    prototype.time_point_sec    last_stake_time                  =      4;
      
}


message so_list_stakeRecord_by_record {
	prototype.stake_record    	record                      = 1;
}


message so_list_stakeRecord_by_record_reverse {
	prototype.stake_record_reverse    	record_reverse      = 1;
	prototype.stake_record    	record                      = 2;
}


message so_unique_stakeRecord_by_record {
	prototype.stake_record    	record                      = 1;
}
